--- a/Profile.html
+++ b/Profile.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio src="sfx/Background.mp3" loop="3" autoplay="true"></audio>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top " data-bs-theme="dark">
         <div class="container-fluid ">
