Modificando el inicio

--- a/index.html
+++ b/index.html
@@ -65,14 +65,13 @@
       <div class="bubble"></div>
     </div>
     
-    <div class="container d-flex justify-content-center align-items-center vh-100">     
-        <div class="text-center">
-            <h1 class="maquina-escribir" style="font-size: 10rem;">Elliot Reyes<span class="cursor">|</span></h1>
+    <div class="container-fluid d-flex justify-content-center align-items-center vh-100">
+        <div class="text-center fade-in">
+            <h1 style="font-size: 8rem;">Elliot Reyes</h1>
             <p>Alias: AtraxxDev</p>
             <p>Desarrollador de Videojuegos</p>
         </div>
     </div>
-    
 
     <footer>
         <div class="container">
